--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Maths</title>
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
 </head>
 
 <body>
     <h1 class="heading">
         <img class="logo" src="assets/images/logo.png" alt="logo"> Love Maths
     </h1>
+
 
     <div class="game-area">
         <div class="controls-area">
