--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Maths</title>
-    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 </head>
 
 <body>
